# tf-nz-toolshed

./: .gitignore  00_login.sh  01_basic.sh  02_cloudfront.sh  03_edgelambda.sh  04_curl.sh  Makefile  README.md  config.yml  pyproject.toml
.github/workflows/: terraform-cicd-parent.yml  terraform-cicd-per-stack.yml
bootstrap/: README.md  TerraformExtraPermissionsToManageIAMRoles.json  github-actions.yaml  terraform-backend.yaml
bootstrap/github/workflows/: README.md  terraform-cicd-per-stack.yml
functions/viewer-request/: auth.py
modules/: README.md
modules/public_asset_hosting_cloudfront/: main.tf
modules/public_asset_hosting_cloudfront_edge_lambda/: main.tf
modules/public_asset_hosting_public_s3/: main.tf
scripts/: tf-stack.py
scripts/templates/: README.md.j2  main.tf  variables.tf
scripts/templates/backends/: base.config.j2
stacks/public_asset_hosting/: README.md  backend.tf  main.tf
stacks/public_asset_hosting/backends/: dev.config  prod.config  test.config
stacks/public_asset_hosting_https/: README.md  main.tf
stacks/public_asset_hosting_https/backends/: dev.config  prod.config  test.config
stacks/public_asset_hosting_lambdaedge/: README.md  main.tf  provider.tf
stacks/public_asset_hosting_lambdaedge/backends/: dev.config  prod.config  test.config
static_assets/: error.html  index.html
